refactor(api): add chat http services
