# api/internal/chat/domain/repository.go
@@ -1,0 +1,7 @@
+package domain
+
+type ChatRepository interface {
+	Create(chat *Chat) error
+	GetChat(roomId string) (*Chat, error)
+	Save(chat *Chat) error
+}
